--- a/src/components/Myservices/Myservices.css
+++ b/src/components/Myservices/Myservices.css
@@ -30,14 +30,13 @@
 .myservices-card {
   max-width: 310px;
   min-width: 200px;
-  min-height: 200px;
-  max-height: auto;
-  height: 100%;
+  min-height: 260px;
+
   width: 100%;
   border: 1px solid white;
   margin-right: 20px;
-  padding: 40px 30px;
-  display: inline-flex;
+  padding: 30px 20px;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -48,11 +47,22 @@
 .myservices-card h4 {
   white-space: nowrap;
   color: white;
-  font-size: 15px;
+  font-size: 18px;
   margin: 17px 0;
   text-transform: uppercase;
   font-weight: 600;
   transition: all 0.4s ease;
+}
+.myservices-card span {
+  transition: all 0.4s ease;
+  font-weight: 500;
+
+  font-size: 11px;
+  color: #ababab;
+  text-align: center;
+  height: 54px;
+  line-height: 20px;
+  letter-spacing: 1px;
 }
 .myservices-card:hover {
   top: -10px;
@@ -85,7 +95,11 @@
   -webkit-animation: bounce-in-top 1.1s both;
   animation: bounce-in-top 1.1s both;
 }
-
+.span-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @-webkit-keyframes bounce-in-top {
   0% {
     -webkit-transform: translateY(-500px);
