--- a/src/components/Contact-Me/Contact.css
+++ b/src/components/Contact-Me/Contact.css
@@ -5,6 +5,8 @@
   margin: 0 auto !important;
   width: 100%;
   flex-direction: column;
+  transition: all 0.5s linear;
+  -webkit-transition: all 0.5s linear;
 }
 .contact-header {
   margin-top: 7rem;
@@ -16,12 +18,11 @@
   text-transform: 600;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: white;
   text-transform: uppercase;
 }
 .contact-header span {
   font-weight: 600;
-  color: #ff4a57;
+  color: #EA7186;
 }
 .custominputteext {
   background: transparent !important;
@@ -47,16 +48,17 @@
   padding: 20px 20px;
   letter-spacing: 0.6px;
   font-weight: 600;
-  background: #ff4a57;
+  background: #7A77B9;
   line-height: 10px;
   border: none;
   border-radius: 4px;
-  transition: all 0.4s ease-in-out 0s;
+  transition: all 0.5s linear;
+  -webkit-transition: all 0.5s linear;
   margin-bottom: 10px;
 }
 .contact-btton:hover {
-  background: white;
-  color: #ff4a57;
+  background: #7A77B9;
+  color:wheat;
 }
 .button-container {
   display: flex;
