--- a/src/components/Intreduce/Intreduce.css
+++ b/src/components/Intreduce/Intreduce.css
@@ -2,15 +2,17 @@
   display: flex;
   padding: 1rem 175px;
   justify-content: space-between;
-  margin-top: 2rem;
+  margin-top: 4.5rem;
 }
 .intreduce-img {
   display: flex;
   flex: 0.5;
+ 
+
 } 
 .intreduce-img img {
   width: 200px;
-  height: 280px;
+  margin-left: 4rem;
 }
 .intreduce-text {
   flex: 0.5;
@@ -20,17 +22,19 @@
   flex-direction: column;
 }
 .intreduce-text h4 {
-  font-size: 30px;
+  font-size: 26px;
   margin: 0 0 20px;
-  font-weight: 600;
+  font-weight: 500;
   text-transform: capitalize;
-  color: white;
+  /* color: white; */
 }
 .intreduce-text p {
-  font-weight: 500;
-  color: #ababab;
+  font-weight:200;
+  /* color: #ababab; */
   font-size: 15px;
-  letter-spacing: 0.9px;
+  letter-spacing: .5px;
+  line-height: 26px;
+  font-family: var(--font-family);
 }
 .about_details {
   margin-top: 1rem;
@@ -39,15 +43,17 @@
 }
 .ct-about {
   margin-bottom: 6px;
-  color: #ababab;
+  /* color: #ababab; */
 }
 .ct-about span {
+  font-size: 16px;
+
   width: 150px;
   display: inline-block;
-  font-weight: 600;
+  font-weight: 500;
   white-space: nowrap;
   text-transform: capitalize;
-  color: white;
+  /* color: white; */
 }
 .cv-btton {
   text-decoration: none;
@@ -55,18 +61,18 @@
   font-size: 13px;
   margin-top: 30px;
   text-transform: capitalize;
-  padding: 20px 20px;
+  padding: 20px 20px; 
   letter-spacing: 0.6px;
   font-weight: 600;
-  background: #ff4a57;
+  background: #7A77B9;
   line-height: 10px;
   border: none;
   border-radius: 4px;
   transition: all 0.4s ease-in-out 0s;
 }
 .cv-btton:hover {
-  background: white;
-  color: #ff4a57;
+  background: #7A77B9;
+  color: wheat;
 }
 
 @media screen and (max-width: 700px) {
@@ -76,6 +82,13 @@
   .intreduce-img {
     justify-content: center;
     margin-bottom: 4rem;
+  }
+  .intreduce-img {
+    order: 1;
+  } 
+  .intreduce-img img {
+ 
+    margin: 0;
   }
 }
 
@@ -131,3 +144,5 @@
     padding: 1rem 60px;
   }
 }
+
+
