--- a/src/components/Intreduce/Intreduce.css
+++ b/src/components/Intreduce/Intreduce.css
@@ -155,6 +155,11 @@
   top: 0;
   width: 100%;
   z-index: 5;
+  display: block;
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.5s linear;
+
 }
 @-webkit-keyframes slide-in-blurred-left {
   0% {
